--- a/auth-service.yml
+++ b/auth-service.yml
@@ -24,6 +24,15 @@ eureka:
 # LOGGING
 #logging.level.org.springframework.security: DEBUG
 
+# TOKENSTORE
+jdbc:
+  host:
+    mytraits-token-store.cajqukhp151z.us-east-1.rds.amazonaws.com
+  port:
+    5432
+  activitydb:
+    tokenstore
+
 ---
 
 spring:
