--- a/auth-service.yml
+++ b/auth-service.yml
@@ -34,6 +34,7 @@ jdbc:
     tokenstore
 
 # DATABASE
+spring:
   datasource:
       dataSourceClassName: org.postgresql.ds.PGSimpleDataSource
       url: jdbc:postgresql://mytraits-token-store.cajqukhp151z.us-east-1.rds.amazonaws.com:5432/users
@@ -41,7 +42,6 @@ jdbc:
       serverName: mytraits-token-store.cajqukhp151z.us-east-1.rds.amazonaws.com
       username: iseq
       password: iseqsecret
-
   jpa:
       database-platform: org.hibernate.dialect.PostgreSQLDialect
       database: POSTGRESQL
